# speculative-decoding

./: README.md  pyproject.toml
configs/: qwen.yaml
scratch/: test-decode.py
scripts/: generate.py
src/: generate.py
src/utils/: autoregressive.py
